force-app/main/default/objects/Batch_Master__c/Batch_Master__c.object-meta.xml
<CustomObject>
    <label>Batch Master</label>
    <pluralLabel>Batch Masters</pluralLabel>
    <nameField>
        <label>Batch Master Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>FMCG Batch and Expiry tracking for product batch lifecycle management (MOD-13 Industry Extensions)</description>
</CustomObject>