force-app/main/default/objects/Batch_Master__c/fields/Batch_Number__c.field-meta.xml
<CustomField>
    <fullName>Batch_Number__c</fullName>
    <label>Batch Number</label>
    <type>Text</type>
    <length>100</length>
    <unique>true</unique>
    <externalId>true</externalId>
</CustomField>