force-app/main/default/objects/Batch_Master__c/fields/Is_Near_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Is_Near_Expiry__c</fullName>
    <label>Is Near Expiry</label>
    <type>Checkbox</type>
    <formula>AND(
    NOT(ISBLANK(Expiry_Date__c)),
    (Expiry_Date__c - TODAY()) &lt; 30,
    (Expiry_Date__c - TODAY()) &gt;= 0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
</CustomField>