force-app/main/default/objects/Batch_Master__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Lookup</type>
    <referenceTo>Product_Extension__c</referenceTo>
    <relationshipLabel>Batch Masters</relationshipLabel>
    <relationshipName>Batch_Masters</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>