force-app/main/default/objects/Batch_Master__c/fields/Product_Ext__c.field-meta.xml
<CustomField>
    <fullName>Product_Ext__c</fullName>
    <label>Product</label>
    <type>Lookup</type>
    <referenceTo>Product_Extension__c</referenceTo>
    <relationshipLabel>Batch Masters (Ext)</relationshipLabel>
    <relationshipName>Batch_Masters_Ext</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>