force-app/main/default/objects/Batch_Master__c/fields/Quantity_Manufactured__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Manufactured__c</fullName>
    <label>Quantity Manufactured</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>