force-app/main/default/objects/Batch_Master__c/fields/Shelf_Life_Days__c.field-meta.xml
<CustomField>
    <fullName>Shelf_Life_Days__c</fullName>
    <label>Shelf Life Days</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>