force-app/main/default/objects/Batch_Master__c/fields/Shelf_Life_Remaining_Pct__c.field-meta.xml
<CustomField>
    <fullName>Shelf_Life_Remaining_Pct__c</fullName>
    <label>Shelf Life Remaining %</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
    <formula>IF(
    AND(NOT(ISBLANK(Expiry_Date__c)), NOT(ISBLANK(Manufacturing_Date__c)), Expiry_Date__c &gt; Manufacturing_Date__c),
    MAX(0, (Expiry_Date__c - TODAY()) / (Expiry_Date__c - Manufacturing_Date__c)),
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
</CustomField>