force-app/main/default/objects/Batch_Master__c/validationRules/Expiry_After_Manufacturing.validationRule-meta.xml
<ValidationRule>
    <fullName>Expiry_After_Manufacturing</fullName>
    <active>true</active>
    <description>Ensures the Expiry Date is after the Manufacturing Date.</description>
    <errorConditionFormula>Expiry_Date__c &lt;= Manufacturing_Date__c</errorConditionFormula>
    <errorDisplayField>Expiry_Date__c</errorDisplayField>
    <errorMessage>Expiry Date must be after Manufacturing Date.</errorMessage>
</ValidationRule>