force-app/main/default/objects/Batch_Master__c/validationRules/Manufacturing_Date_Not_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Manufacturing_Date_Not_Future</fullName>
    <active>true</active>
    <description>Ensures the Manufacturing Date is not set to a future date.</description>
    <errorConditionFormula>Manufacturing_Date__c &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>Manufacturing_Date__c</errorDisplayField>
    <errorMessage>Manufacturing Date cannot be a future date.</errorMessage>
</ValidationRule>