force-app/main/default/objects/Batch_Master__c/validationRules/Quantity_Manufactured_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Quantity_Manufactured_Positive</fullName>
    <active>true</active>
    <description>Ensures Quantity Manufactured is greater than zero when provided.</description>
    <errorConditionFormula>NOT(ISBLANK(Quantity_Manufactured__c)) &amp;&amp; Quantity_Manufactured__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Quantity_Manufactured__c</errorDisplayField>
    <errorMessage>Quantity Manufactured must be greater than zero.</errorMessage>
</ValidationRule>