force-app/main/default/objects/Batch_Master__c/listViews/All_Batches.listView-meta.xml
<ListView>
    <fullName>All_Batches</fullName>
    <columns>NAME</columns>
    <columns>Batch_Number__c</columns>
    <columns>Product_Ext__c</columns>
    <columns>Manufacturing_Date__c</columns>
    <columns>Expiry_Date__c</columns>
    <columns>Shelf_Life_Remaining_Pct__c</columns>
    <columns>Status__c</columns>
    <columns>Is_Near_Expiry__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Batches</label>
</ListView>