force-app/main/default/objects/Batch_Master__c/listViews/Recalled_Batches.listView-meta.xml
<ListView>
    <fullName>Recalled_Batches</fullName>
    <columns>NAME</columns>
    <columns>Batch_Number__c</columns>
    <columns>Product_Ext__c</columns>
    <columns>Manufacturing_Date__c</columns>
    <columns>Expiry_Date__c</columns>
    <columns>Quantity_Manufactured__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Recalled</value>
    </filters>
    <label>Recalled Batches</label>
</ListView>